COM origin/displacement calculation working, need to visualize next

--- a/src/icp_node/CMakeLists.txt
+++ b/src/icp_node/CMakeLists.txt
@@ -9,6 +9,7 @@ project(icp_node)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   roscpp
+  visualization_msgs
 )
 
 
